# OpenSQLAnywhere

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SPECIFICATION.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
crates/opensqlany/: Cargo.toml  README.md
crates/opensqlany-cli/: Cargo.toml
crates/opensqlany-cli/src/: main.rs
crates/opensqlany/src/: ap.rs  error.rs  lib.rs  page.rs  slotted.rs  store.rs  superblock.rs
crates/opensqlany/tests/: synthetic.rs
docs/: .gitignore  README.md  docusaurus.config.ts  package.json  sidebars.ts  wrangler.jsonc
docs/docs/: ap-deobfuscation.md  install.md  intro.md  openqbw.md  quickstart-cli.md  quickstart-rust.md  specification.md
