[package]
name = "opensqlany-cli"
description = "Command-line inspector for SAP SQL Anywhere page-store files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords = ["sqlanywhere", "cli", "database", "sap"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "opensqlany"
path = "src/main.rs"

[dependencies]
opensqlany.workspace = true
anyhow.workspace = true
clap.workspace = true

[lints]
workspace = true
